# MusicCLI

./: README.md  crawler.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
musiccli-1.2.0/: PKG-INFO  pyproject.toml
musiccli-1.2.0/src/musiccli/: __init__.py  __main__.py  main.py
src/musiccli/: __main__.py  crawler.py  main.py
